fixed linewrapping choice blocks

--- a/stylesheets/blocks.css
+++ b/stylesheets/blocks.css
@@ -1,5 +1,5 @@
 /* Styles for steps and containers */
-.wrapper, .socket, .keys{
+.wrapper, .socket, .autosocket{
   display: inline-block;
   position: relative;
 }
